--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css);
 
-*{
-    font-family: 'Poppins', sans-serif;
+* {
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+/* Global Variables */
 
 :root {
     background-color: rgb(233, 223, 211);
@@ -26,7 +28,7 @@ main {
     margin-top: 100px;
     background-color: white;
     width: 100%;
-    height: 200px;
+    min-height: 200px;
     padding: 25px;
     box-shadow: 0px 0px 10px 1px rgb(177, 174, 174);
     display: flex;
@@ -34,10 +36,50 @@ main {
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    position: relative;
+}
 
-} 
+.card > span:not(span:last-of-type) {
+    font-size: 0.85em;
+    width: 90%;
+    text-align: center;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+    top: 40px;
+    position: absolute;
+    display: none;
+}
+
+.card > span:not(span:last-of-type).show_message {
+    display: block;
+}
+
+.card > span:not(span:last-of-type).redMessage {
+    background-color: rgb(242, 176, 176);
+}
+
+.card > span:not(span:last-of-type).GreenMessage {
+    background-color: rgb(138, 225, 158);
+}
+
+.card > span:last-of-type {
+    display: none;
+    color: red;
+    transition: 0.4s;
+}
+
+.card > span:last-of-type:hover {
+    color: rgb(181, 65, 65);
+    cursor: pointer;
+}
+
+.card > span.show_clear {
+    display: block;
+}
 
 .title {
+    margin-top: 40px;
     font-size: 2em;
     font-weight: 500;
     letter-spacing: 1px;
@@ -52,30 +94,84 @@ main {
 }
 
 input[type="text"] {
-    width:100% ;
-    background-color:rgb(233, 223, 211) ;
+    width: 100%;
+    background-color: rgb(233, 223, 211);
     padding: 5px 15px;
     border: none;
     border-radius: 10px 0px 0px 10px;
 }
 
-
-input[type="submit"] {
-    width:80px ;
-    background-color:rgb(207, 160, 103) ;
+input[type="submit"],
+input[type="edit"] {
+    width: 80px;
+    background-color: rgb(207, 160, 103);
     padding: 5px 15px;
     border: none;
     border-radius: 0px 10px 10px 0px;
     transition: 0.4s;
+    display: none;
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover,
+input[type="edit"]:hover {
     background-color: rgb(155, 142, 28);
-    color:white ;
+    color: white;
     cursor: pointer;
-
 }
 
+input[type="submit"].show_edit {
+    display: block;
+}
 
+input[type="submit"].show_submit {
+    display: block;
+}
 
+section {
+    margin-top: 20px;
+    padding: 4px 0px;
+    width: 100%;
+}
 
+.box {
+    padding: 4px;
+    margin-top: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: 0.5s;
+}
+
+.box:hover {
+    background-color: rgb(233, 223, 211);
+    border-radius: 5px;
+}
+
+.box span {
+    flex-grow: 1;
+}
+
+.box i {
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+i:first-of-type {
+    color: rgb(126, 210, 137);
+    transition: 0.4s;
+}
+i:last-of-type {
+    color: rgb(194, 110, 110);
+    transition: 0.4s;
+}
+
+i:first-of-type:hover {
+    color: rgb(67, 194, 84);
+}
+i:last-of-type:hover {
+    color: rgb(179, 45, 45);
+}
+
+i:first-child {
+    cursor: pointer;
+}
